fixed button out of screen bug

--- a/web/src/sass/base/main.scss
+++ b/web/src/sass/base/main.scss
@@ -12,7 +12,6 @@ body {
 [class*="col-"] {
   float: left;
   padding: 15px;
-  border: none;
 }
 
 .col-1 {width: 8.33%;}
@@ -22,7 +21,7 @@ body {
 .col-5 {width: 41.66%;}
 .col-6 {width: 50%;}
 .col-7 {width: 58.33%;}
-.col-8 {width: 66.66%; padding: 1px}
+.col-8 {width: 66.66%;}
 .col-9 {width: 75%;}
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
@@ -134,12 +133,8 @@ option {
     display: none;
   }
 
-  .col-8 {
+  .col-8, .container {
     width:100%;
-  }
-
-  .container {
-    width:99.7%;
     padding: 0;
   }
 
